Avoid deleting multiple tracks instead of one

Additionally, testing with a sample track provided on bug report, an earlier bug
where duplicate removal didn't work for some specific tracks seems to have been fixed.

BUG: 313791